<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sign_email">


    <LinearLayout
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="0dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="30dp"
            android:gravity="top|left"
            android:text="@string/matriculation_no"
            android:textColor="#101010"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_frame"
            android:hint="@string/your_matricule_xxaxxxxfs"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="20dp"
            android:gravity="top|left"
            android:text="@string/password"
            android:textColor="#101010"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutTextInput"
            style="@style/TextLabel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            app:passwordToggleDrawable="@drawable/eye_password"
            app:passwordToggleEnabled="true">


            <EditText
                android:id="@+id/pass"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edittext_frame"
                android:drawableEnd="@drawable/eye_password"
                android:drawableRight="@drawable/eye_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Button
            android:id="@+id/btnSignIn"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_idle"
            android:text="@string/sign_in"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/clicksign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_idle1"
            android:text="@string/new_user_sign_up"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>