<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <Button
        android:id="@+id/pick_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        android:background="@drawable/button_idle"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/add_note"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="start|top"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_idle"
        android:drawableStart="@drawable/outline_edit_note_20"
        android:hint="@string/add_description_optional"
        android:inputType="textMultiLine|textAutoComplete"
        android:lines="8"
        android:maxLines="10"
        android:minLines="6"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textAlignment="viewStart"
        android:textStyle="italic"
        android:drawableLeft="@drawable/outline_edit_note_20" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:src="@drawable/unsplash" />

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_weight="1"
        android:background="@drawable/button_idle"
        android:text="@string/post_notice"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        android:textSize="18sp" />

</LinearLayout>

    </ScrollView>

</LinearLayout>